--- a/app/src/main/res/layout/create_project_dialog.xml
+++ b/app/src/main/res/layout/create_project_dialog.xml
@@ -44,7 +44,7 @@
                     android:src="@drawable/separator"
                     android:contentDescription="@string/separator"
                     android:layout_marginTop="20dp"
-                    app:layout_constraintTop_toBottomOf="@+id/create_text"
+                    app:layout_constraintTop_toBottomOf="@id/create_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -62,7 +62,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/name_desc"
+                    app:layout_constraintTop_toBottomOf="@id/name_desc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="15dp"
@@ -97,7 +97,7 @@
                     android:autoSizeTextType="uniform"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/project_name"
+                    app:layout_constraintTop_toBottomOf="@id/project_name"
                     android:layout_marginTop="25dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp" />
@@ -109,8 +109,8 @@
                     android:background="@drawable/edit_field_background"
                     android:orientation="horizontal"
                     app:checkedButton="@id/manager_button"
-                    app:layout_constraintEnd_toEndOf="@+id/tech_task_text"
-                    app:layout_constraintStart_toStartOf="@+id/tech_task_text"
+                    app:layout_constraintEnd_toEndOf="@id/tech_task_text"
+                    app:layout_constraintStart_toStartOf="@id/tech_task_text"
                     app:layout_constraintTop_toBottomOf="@id/tech_task_text"
                     android:layout_marginTop="13dp"
                     app:layout_constrainedWidth="true">
@@ -147,7 +147,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/pick_tech_task"
+                        app:layout_constraintStart_toEndOf="@id/pick_tech_task"
                         app:layout_constrainedWidth="true" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -216,11 +216,11 @@
                     app:srcCompat="@drawable/calendar_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    app:layout_constraintTop_toTopOf="@+id/date_field"
-                    app:layout_constraintEnd_toEndOf="@+id/date_field"
+                    app:layout_constraintTop_toTopOf="@id/date_field"
+                    app:layout_constraintEnd_toEndOf="@id/date_field"
                     style="@style/classic_button_style"
                     tools:ignore="TouchTargetSizeCheck"
-                    app:layout_constraintBottom_toBottomOf="@+id/date_field"
+                    app:layout_constraintBottom_toBottomOf="@id/date_field"
                     android:scaleType="fitEnd"
                     android:paddingRight="8dp"
                     android:paddingTop="8dp"
@@ -352,7 +352,7 @@
                     android:textAlignment="textStart"
                     android:fontFamily="@font/montserrat_medium"
                     android:autoSizeTextType="uniform"
-                    app:layout_constraintTop_toBottomOf="@+id/added_team"
+                    app:layout_constraintTop_toBottomOf="@id/added_team"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -373,7 +373,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/find_desc"
+                    app:layout_constraintTop_toBottomOf="@id/find_desc"
                     android:layout_marginTop="15dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="24dp"
@@ -390,10 +390,10 @@
                     android:fontFamily="@font/montserrat_bold"
                     android:drawablePadding="10dp"
                     app:drawableLeftCompat="@drawable/find_icon"
-                    app:layout_constraintEnd_toEndOf="@+id/find_team"
+                    app:layout_constraintEnd_toEndOf="@id/find_team"
                     android:paddingVertical="5dp"
                     tools:ignore="TouchTargetSizeCheck"
-                    app:layout_constraintTop_toBottomOf="@+id/find_team"
+                    app:layout_constraintTop_toBottomOf="@id/find_team"
                     android:layout_marginTop="10dp"
                     android:textAlignment="center"
                     android:paddingHorizontal="40dp"
@@ -423,14 +423,14 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/empty_search_message"
                     android:textAlignment="center"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_search"
+                    app:layout_constraintTop_toBottomOf="@id/btn_search"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="20dp"
                     android:visibility="gone"
                     android:layout_marginTop="25dp"
-                    app:layout_constraintBottom_toTopOf="@+id/submit"
+                    app:layout_constraintBottom_toTopOf="@id/submit"
                     android:layout_marginBottom="25dp" />
 
             <Button
@@ -440,7 +440,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="TouchTargetSizeCheck"
-                    app:layout_constraintTop_toBottomOf="@+id/search_teams"
+                    app:layout_constraintTop_toBottomOf="@id/search_teams"
                     android:layout_marginTop="25dp"
                     android:enabled="false"
                     app:layout_constraintBottom_toBottomOf="parent"
