--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -46,7 +46,7 @@
                     android:textAlignment="textStart"
                     android:fontFamily="@font/montserrat_medium"
                     android:autoSizeTextType="uniform"
-                    app:layout_constraintTop_toBottomOf="@+id/error_text"
+                    app:layout_constraintTop_toBottomOf="@id/error_text"
                     android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
                     android:textAlignment="textStart"
                     android:fontFamily="@font/montserrat_medium"
                     android:autoSizeTextType="uniform"
-                    app:layout_constraintTop_toBottomOf="@+id/addedMembers"
+                    app:layout_constraintTop_toBottomOf="@id/addedMembers"
                     android:layout_marginTop="15dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="25dp"
@@ -93,7 +93,7 @@
                     android:src="@drawable/separator"
                     android:contentDescription="@string/separator"
                     android:layout_marginTop="20dp"
-                    app:layout_constraintTop_toBottomOf="@+id/create_text"
+                    app:layout_constraintTop_toBottomOf="@id/create_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -111,7 +111,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/name_desc"
+                    app:layout_constraintTop_toBottomOf="@id/name_desc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="15dp"
@@ -133,7 +133,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/find_desc"
+                    app:layout_constraintTop_toBottomOf="@id/find_desc"
                     android:layout_marginTop="15dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="24dp"
@@ -150,10 +150,10 @@
                     android:fontFamily="@font/montserrat_bold"
                     android:drawablePadding="10dp"
                     app:drawableLeftCompat="@drawable/find_icon"
-                    app:layout_constraintEnd_toEndOf="@+id/find_name"
+                    app:layout_constraintEnd_toEndOf="@id/find_name"
                     android:paddingVertical="5dp"
                     tools:ignore="TouchTargetSizeCheck"
-                    app:layout_constraintTop_toBottomOf="@+id/find_name"
+                    app:layout_constraintTop_toBottomOf="@id/find_name"
                     android:layout_marginTop="10dp"
                     android:textAlignment="center"
                     android:paddingHorizontal="40dp"
@@ -171,7 +171,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="TouchTargetSizeCheck"
-                    app:layout_constraintTop_toBottomOf="@+id/searchUsers"
+                    app:layout_constraintTop_toBottomOf="@id/searchUsers"
                     android:layout_marginTop="25dp"
                     android:enabled="false"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -181,7 +181,7 @@
                     android:id="@+id/addedMembers"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/added_members"
+                    app:layout_constraintTop_toBottomOf="@id/added_members"
                     android:layout_marginTop="13dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="24dp"
@@ -210,8 +210,8 @@
                     android:textAlignment="textStart"
                     app:layout_constraintTop_toBottomOf="@id/team_name"
                     android:layout_marginTop="3dp"
-                    app:layout_constraintStart_toStartOf="@+id/team_name"
-                    app:layout_constraintEnd_toEndOf="@+id/team_name"
+                    app:layout_constraintStart_toStartOf="@id/team_name"
+                    app:layout_constraintEnd_toEndOf="@id/team_name"
                     android:layout_marginEnd="10dp"
                     android:visibility="gone"
                     android:layout_marginStart="10dp" />
@@ -223,14 +223,14 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/empty_search_message"
                     android:textAlignment="center"
-                    app:layout_constraintTop_toBottomOf="@+id/btnSearch"
+                    app:layout_constraintTop_toBottomOf="@id/btnSearch"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="20dp"
                     android:visibility="gone"
                     android:layout_marginTop="25dp"
-                    app:layout_constraintBottom_toTopOf="@+id/submit"
+                    app:layout_constraintBottom_toTopOf="@id/submit"
                     android:layout_marginBottom="25dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
