--- a/app/src/main/res/layout/crop_photo_dialog.xml
+++ b/app/src/main/res/layout/crop_photo_dialog.xml
@@ -74,10 +74,10 @@
             android:contentDescription="@string/avatar"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="22dp"
-            app:layout_constraintTop_toBottomOf="@+id/crop_desc"
+            app:layout_constraintTop_toBottomOf="@id/crop_desc"
             android:layout_marginTop="20dp"
             android:adjustViewBounds="true"
-            app:layout_constraintBottom_toTopOf="@+id/save_miniature"
+            app:layout_constraintBottom_toTopOf="@id/save_miniature"
             android:layout_marginBottom="20dp"
             app:cropGuidelinesThickness="1dp"
             app:cropGuidelinesColor="#804A4A4A"
@@ -96,7 +96,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toBottomOf="@+id/crop_desc"
+            app:layout_constraintTop_toBottomOf="@id/crop_desc"
             android:layout_marginTop="390dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
