--- a/app/src/main/res/layout/edit_user_dialog.xml
+++ b/app/src/main/res/layout/edit_user_dialog.xml
@@ -42,7 +42,7 @@
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/create_text"
+            app:layout_constraintTop_toBottomOf="@id/create_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -152,7 +152,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toBottomOf="@+id/vk"
+            app:layout_constraintTop_toBottomOf="@id/vk"
             android:layout_marginTop="30dp"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
@@ -167,8 +167,8 @@
             android:textAlignment="textStart"
             android:layout_marginTop="2dp"
             app:layout_constraintTop_toBottomOf="@id/phone_number"
-            app:layout_constraintStart_toStartOf="@+id/phone_number"
-            app:layout_constraintEnd_toEndOf="@+id/phone_number"
+            app:layout_constraintStart_toStartOf="@id/phone_number"
+            app:layout_constraintEnd_toEndOf="@id/phone_number"
             android:visibility="gone"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp" />
@@ -182,8 +182,8 @@
             android:textAlignment="textStart"
             android:layout_marginTop="2dp"
             app:layout_constraintTop_toBottomOf="@id/email"
-            app:layout_constraintStart_toStartOf="@+id/email"
-            app:layout_constraintEnd_toEndOf="@+id/email"
+            app:layout_constraintStart_toStartOf="@id/email"
+            app:layout_constraintEnd_toEndOf="@id/email"
             android:visibility="gone"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp" />
@@ -196,9 +196,9 @@
             android:textAppearance="@style/error_field_message"
             android:textAlignment="textStart"
             android:layout_marginTop="2dp"
-            app:layout_constraintTop_toBottomOf="@+id/vk"
-            app:layout_constraintStart_toStartOf="@+id/vk"
-            app:layout_constraintEnd_toEndOf="@+id/vk"
+            app:layout_constraintTop_toBottomOf="@id/vk"
+            app:layout_constraintStart_toStartOf="@id/vk"
+            app:layout_constraintEnd_toEndOf="@id/vk"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/submit"
             android:layout_marginBottom="12dp"
