--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -13,7 +13,7 @@
             android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/scrollView"
+            app:layout_constraintTop_toTopOf="@id/scrollView"
             android:layout_marginTop="32dp"
             android:id="@+id/card_background" />
 
@@ -63,7 +63,7 @@
                         android:textAppearance="@style/active_toggle"
                         android:text="@string/create_project"
                         android:textAlignment="center"
-                        app:layout_constraintStart_toStartOf="@+id/toggleGroup"
+                        app:layout_constraintStart_toStartOf="@id/toggleGroup"
                         android:paddingHorizontal="21dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
                             android:stateListAnimator="@null"
                             tools:ignore="TouchTargetSizeCheck"
                             android:paddingHorizontal="30dp"
-                            app:layout_constraintEnd_toStartOf="@+id/member_button"
+                            app:layout_constraintEnd_toStartOf="@id/member_button"
                             android:layout_marginEnd="-10dp"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +134,7 @@
                         android:textAppearance="@style/error_message"
                         android:textAlignment="center"
                         android:text="@string/empty_projects_text"
-                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
                         android:layout_marginTop="40dp"
                         android:visibility="gone"
                         app:layout_constraintStart_toStartOf="parent"
@@ -146,7 +146,7 @@
                         android:id="@+id/recyclerView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:nestedScrollingEnabled="false"
