--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -38,9 +38,9 @@
                 android:background="@drawable/edit_icon"
                 style="@style/orange_button_style"
                 tools:ignore="TouchTargetSizeCheck"
-                app:layout_constraintTop_toTopOf="@+id/teamName"
-                app:layout_constraintBottom_toBottomOf="@+id/teamName"
-                app:layout_constraintStart_toEndOf="@+id/teamName"
+                app:layout_constraintTop_toTopOf="@id/teamName"
+                app:layout_constraintBottom_toBottomOf="@id/teamName"
+                app:layout_constraintStart_toEndOf="@id/teamName"
                 android:layout_marginStart="16dp" />
 
         <Button
@@ -51,9 +51,9 @@
                 android:background="@drawable/delete_icon"
                 style="@style/orange_button_style"
                 tools:ignore="TouchTargetSizeCheck"
-                app:layout_constraintTop_toTopOf="@+id/editTeam"
-                app:layout_constraintBottom_toBottomOf="@+id/editTeam"
-                app:layout_constraintStart_toEndOf="@+id/editTeam"
+                app:layout_constraintTop_toTopOf="@id/editTeam"
+                app:layout_constraintBottom_toBottomOf="@id/editTeam"
+                app:layout_constraintStart_toEndOf="@id/editTeam"
                 android:layout_marginStart="10dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -79,11 +79,11 @@
             android:rotationY="180"
             android:contentDescription="@string/previous_cards"
             tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
-            app:layout_constraintTop_toTopOf="@+id/imagePager"
-            app:layout_constraintBottom_toBottomOf="@+id/imagePager"
+            app:layout_constraintTop_toTopOf="@id/imagePager"
+            app:layout_constraintBottom_toBottomOf="@id/imagePager"
             app:layout_constraintStart_toStartOf="parent"
             android:background="@null"
-            app:layout_constraintEnd_toStartOf="@+id/imagePager"
+            app:layout_constraintEnd_toStartOf="@id/imagePager"
             android:layout_marginStart="5dp" />
 
     <LinearLayout
@@ -97,7 +97,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/imagePager" />
+            app:layout_constraintTop_toBottomOf="@id/imagePager" />
 
     <ImageButton
             android:id="@+id/btnNext"
@@ -106,15 +106,15 @@
             android:src="@drawable/arrow"
             android:contentDescription="@string/next_cards"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toTopOf="@+id/imagePager"
-            app:layout_constraintBottom_toBottomOf="@+id/imagePager"
+            app:layout_constraintTop_toTopOf="@id/imagePager"
+            app:layout_constraintBottom_toBottomOf="@id/imagePager"
             app:layout_constraintEnd_toEndOf="parent"
             style="@style/classic_button_style"
             android:clickable="true"
             android:background="@null"
             android:minWidth="5dip"
             android:minHeight="5dip"
-            app:layout_constraintStart_toEndOf="@+id/imagePager"
+            app:layout_constraintStart_toEndOf="@id/imagePager"
             android:layout_marginEnd="5dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
