--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/photo"
+                    app:layout_constraintStart_toEndOf="@id/photo"
                     android:textAlignment="textStart"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constrainedWidth="true"
@@ -87,10 +87,10 @@
                 android:drawableLeft="@drawable/tech_task_icon"
                 android:layout_marginTop="10dp"
                 android:drawablePadding="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/project_header"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintTop_toBottomOf="@id/project_header"
+                app:layout_constraintBottom_toBottomOf="@id/view"
                 android:layout_marginBottom="10dp"
-                app:layout_constraintEnd_toEndOf="@+id/project_header"
+                app:layout_constraintEnd_toEndOf="@id/project_header"
                 android:textAlignment="viewStart"
                 android:paddingTop="0dp"
                 android:paddingBottom="0dp"
@@ -106,7 +106,7 @@
                 android:id="@+id/contacts_container"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                app:layout_constraintTop_toBottomOf="@+id/view"
+                app:layout_constraintTop_toBottomOf="@id/view"
                 android:layout_marginTop="12dp"
                 app:layout_constraintHorizontal_bias="0.0">
 
@@ -195,9 +195,9 @@
                 android:textAppearance="@style/team_text"
                 android:textAlignment="center"
                 android:autoSizeTextType="uniform"
-                app:layout_constraintStart_toStartOf="@+id/contacts_container"
-                app:layout_constraintEnd_toEndOf="@+id/contacts_container"
-                app:layout_constraintTop_toBottomOf="@+id/contacts_container"
+                app:layout_constraintStart_toStartOf="@id/contacts_container"
+                app:layout_constraintEnd_toEndOf="@id/contacts_container"
+                app:layout_constraintTop_toBottomOf="@id/contacts_container"
                 android:layout_marginTop="13dp" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -205,10 +205,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constrainedHeight="true"
-                app:layout_constraintTop_toBottomOf="@+id/team_text"
+                app:layout_constraintTop_toBottomOf="@id/team_text"
                 android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/team_text"
-                app:layout_constraintEnd_toEndOf="@+id/team_text"
+                app:layout_constraintStart_toStartOf="@id/team_text"
+                app:layout_constraintEnd_toEndOf="@id/team_text"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="15dp" />
