--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -23,7 +23,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/progressBar"
+                app:layout_constraintTop_toBottomOf="@id/progressBar"
                 android:layout_marginTop="16dp"
                 android:textAppearance="@style/loading"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +41,6 @@
                 android:indeterminateTintMode="src_atop"
                 android:indeterminateTint="@color/light_gray"
                 android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/textView" />
+                app:layout_constraintBottom_toTopOf="@id/textView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
