--- a/app/src/main/res/layout/network_dialog.xml
+++ b/app/src/main/res/layout/network_dialog.xml
@@ -23,7 +23,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/wifi"
+                app:layout_constraintTop_toBottomOf="@id/wifi"
                 android:layout_marginTop="20dp"
                 android:textAppearance="@style/network"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
                 android:text="@string/network_down_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@id/textView"
                 android:layout_marginTop="16dp"
                 android:textAppearance="@style/network_down"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +50,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:src="@drawable/wifi_icon"
                 android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/textView" />
+                app:layout_constraintBottom_toTopOf="@id/textView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
