--- a/app/src/main/res/layout/update_user_dialog.xml
+++ b/app/src/main/res/layout/update_user_dialog.xml
@@ -46,7 +46,7 @@
             android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separator"
+            app:layout_constraintTop_toBottomOf="@id/separator"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp" />
@@ -58,7 +58,7 @@
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/reload_text"
+            app:layout_constraintTop_toBottomOf="@id/reload_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -83,7 +83,7 @@
                 android:hint="@string/password"
                 android:textAppearance="@style/login"
                 android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/password_icon"
+                android:layout_toEndOf="@id/password_icon"
                 android:layout_centerVertical="true"
                 android:background="@null"
                 android:layout_alignParentEnd="true"
@@ -130,12 +130,12 @@
             android:visibility="gone"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/password_field"
-            app:layout_constraintStart_toStartOf="@+id/password_field"
+            app:layout_constraintStart_toStartOf="@id/password_field"
             android:layout_marginTop="8dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="@id/password_field"
-            app:layout_constraintBottom_toTopOf="@+id/submit"
+            app:layout_constraintBottom_toTopOf="@id/submit"
             android:layout_marginBottom="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
