--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -38,14 +38,16 @@
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/photoBack"
             android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"/>
+            android:layout_marginEnd="35dp">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
             android:textAppearance="@style/card_name"
             android:textAlignment="center"
             android:autoSizeTextType="uniform"
             android:textColor="@color/dark_gray"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             app:layout_constraintTop_toBottomOf="@id/avatar"
@@ -53,7 +55,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            app:layout_constrainedWidth="true"
+            android:maxWidth="120dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="5dp" />
 
