Added logout dialog

--- a/app/src/main/res/layout/logout_dialog.xml
+++ b/app/src/main/res/layout/logout_dialog.xml
@@ -39,7 +39,7 @@
             android:id="@+id/name_desc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/delete_photo_desc"
+            android:text="@string/logout_desc"
             android:textAppearance="@style/dialog_desc"
             android:textAlignment="viewStart"
             android:fontFamily="@font/montserrat_medium"
@@ -65,10 +65,8 @@
     <Button
             android:id="@+id/submit"
             style="@style/orange_button"
-            android:text="@string/delete_button"
+            android:text="@string/logout_button_text"
             android:textAlignment="textStart"
-            android:drawablePadding="10dp"
-            app:drawableLeftCompat="@drawable/delete_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
