--- a/app/src/main/res/layout/dialog_create_project.xml
+++ b/app/src/main/res/layout/dialog_create_project.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -183,15 +184,8 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp" />
 
-            <com.santalu.maskara.widget.MaskEditText
-                    app:mask="дд.мм.гггг"
-                    app:maskCharacter="д|м|г"
-                    app:maskStyle="completable"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
+            <TextView
                     android:id="@+id/date_field"
-                    android:importantForAutofill="no"
-                    android:inputType="date"
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/date_input"
@@ -208,13 +202,13 @@
                     android:minHeight="38dip"
                     android:paddingHorizontal="12dp"
                     android:textSize="13sp"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    android:gravity="center_vertical" />
 
             <ImageView
                     android:id="@+id/pick_date"
                     android:contentDescription="@string/pick_date"
                     app:srcCompat="@drawable/ic_calendar"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintTop_toTopOf="@id/date_field"
                     app:layout_constraintEnd_toEndOf="@id/date_field"
@@ -226,7 +220,8 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:paddingLeft="8dp"
-                    android:minWidth="58dip" />
+                    android:minWidth="58dip"
+                    app:layout_constraintStart_toStartOf="@+id/date_field" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/status_container"
