--- a/app/src/main/res/drawable/gradient_main.xml
+++ b/app/src/main/res/drawable/gradient_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:useLevel="true"
-        android:dither="true"
-        android:tileMode="repeat"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:useLevel="true"
+       android:dither="true"
+       android:tileMode="repeat">
     <gradient
             android:type="linear"
             android:startColor="#FC0D2468"
