--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -118,7 +118,7 @@
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/contacts_container"
+                android:id="@+id/project_info_container"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 app:layout_constraintTop_toBottomOf="@id/view"
@@ -210,9 +210,9 @@
                 android:textAppearance="@style/team_text"
                 android:textAlignment="center"
                 android:autoSizeTextType="uniform"
-                app:layout_constraintStart_toStartOf="@id/contacts_container"
-                app:layout_constraintEnd_toEndOf="@id/contacts_container"
-                app:layout_constraintTop_toBottomOf="@id/contacts_container"
+                app:layout_constraintStart_toStartOf="@id/project_info_container"
+                app:layout_constraintEnd_toEndOf="@id/project_info_container"
+                app:layout_constraintTop_toBottomOf="@id/project_info_container"
                 android:layout_marginTop="13dp" />
 
         <androidx.recyclerview.widget.RecyclerView
