--- a/app/src/main/res/layout/item_project_member.xml
+++ b/app/src/main/res/layout/item_project_member.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="56dp"
-        android:layout_height="72dp"
-        xmlns:tools="http://schemas.android.com/tools">
+        android:layout_height="72dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="47dp"
@@ -67,7 +67,8 @@
             app:layout_constraintEnd_toEndOf="@id/photoBack"
             app:layout_constraintStart_toStartOf="@id/photoBack"
             app:layout_constraintTop_toTopOf="@id/photoBack"
-            app:layout_constraintBottom_toBottomOf="@id/photoBack" />
+            app:layout_constraintBottom_toBottomOf="@id/photoBack"
+            android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
