--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--suppress NavigationFile -->
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        app:startDestination="@id/tasksFragment">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            app:startDestination="@id/tasksFragment">
 
     <fragment
             android:id="@+id/profileFragment"
             android:name="com.ilyap.yuta.ui.fragments.ProfileFragment"
             android:label="fragment_profile"
             tools:layout="@layout/fragment_profile">
-        <argument
-                android:name="fromTeams"
-                app:argType="boolean"
-                android:defaultValue="false" />
     </fragment>
     <fragment
             android:id="@+id/projectsFragment"
             android:name="com.ilyap.yuta.ui.fragments.ProjectsFragment"
             android:label="fragment_projects"
-            tools:layout="@layout/fragment_projects" />
+            tools:layout="@layout/fragment_projects">
+        <action
+                android:id="@+id/action_projectsFragment_to_profileFragment"
+                app:destination="@id/profileFragment"
+                app:popUpTo="@id/projectsFragment"
+                app:popUpToInclusive="true">
+            <argument
+                    android:name="fromFragment"
+                    app:argType="integer"
+                    android:defaultValue="-1" />
+        </action>
+        <action
+                android:id="@+id/action_projectsFragment_to_readonlyProfileFragment"
+                app:destination="@id/readonlyProfileFragment"
+                app:popUpTo="@id/projectsFragment"
+                app:popUpToInclusive="true" />
+    </fragment>
     <fragment
             android:id="@+id/tasksFragment"
             android:name="com.ilyap.yuta.ui.fragments.TasksFragment"
@@ -34,10 +46,11 @@
                 android:id="@+id/action_teamsFragment_to_profileFragment"
                 app:destination="@id/profileFragment"
                 app:popUpTo="@id/teamsFragment"
-                app:popUpToInclusive="true" >
+                app:popUpToInclusive="true">
             <argument
-                    android:name="fromTeams"
-                    android:defaultValue="true" />
+                    android:name="fromFragment"
+                    app:argType="integer"
+                    android:defaultValue="-1" />
         </action>
         <action
                 android:id="@+id/action_teamsFragment_to_readonlyProfileFragment"
