--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
             android:id="@+id/header"
             android:layout_width="0dp"
             android:layout_height="90dp"
-            android:background="@color/blue"
+            android:background="@drawable/gradient_main"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -224,7 +224,7 @@
             android:id="@+id/footer"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@color/blue"
+            android:background="@drawable/gradient_main"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
